--- a/NEXTRA DIGITAL/index.html
+++ b/NEXTRA DIGITAL/index.html
@@ -193,11 +193,11 @@ body.dark-mode #darkModeToggle:hover {
   </head>
   <body>
     <!-- Dark Mode Toggle -->
-    <div class="position-fixed top-0 end-0 p-3" style="z-index: 1050;">
+<!--     <div class="position-fixed top-0 end-0 p-3" style="z-index: 1050;">
       <button id="darkModeToggle" class="btn btn-sm btn-outline-secondary" aria-label="Toggle dark mode">
         🌙
       </button>
-    </div>
+    </div> -->
     <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container">
