--- a/NEXTRA DIGITAL/about.html
+++ b/NEXTRA DIGITAL/about.html
@@ -26,6 +26,7 @@
           <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="appointment.html">Appointment</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
         </ul>
       </div>
     </div>
@@ -64,7 +65,7 @@
         <!-- Founder -->
         <div class="col-md-6">
           <div class="card h-100 shadow founder-card">
-            <img src="https://images.unsplash.com/photo-1607346256330-dee7af15f7c5?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW5kaWFuJTIwbWFufGVufDB8fDB8fHww" class="card-img-top" alt="Rajdeep Roy">
+            <img src="WhatsApp Image 2025-06-13 at 10.44.57 PM.jpeg" class="card-img-top" alt="Rajdeep Roy">
             <div class="card-body">
               <h4 class="card-title">Rajdeep Roy</h4>
               <h6 class="text-muted">Founder</h6>
