--- a/NEXTRA DIGITAL/index.html
+++ b/NEXTRA DIGITAL/index.html
@@ -193,7 +193,7 @@ body.dark-mode #darkModeToggle:hover {
   </head>
   <body>
     <!-- Dark Mode Toggle -->
-<!--     <div class="position-fixed top-0 end-0 p-3" style="z-index: 1050;">
+    <!-- <div class="position-fixed end-0 p-3" style="z-index: 1050; bottom: 10px;">
       <button id="darkModeToggle" class="btn btn-sm btn-outline-secondary" aria-label="Toggle dark mode">
         🌙
       </button>
@@ -231,7 +231,7 @@ body.dark-mode #darkModeToggle:hover {
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact</a>
-       
+       <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
       </ul>
     </div>
   </div>
@@ -308,7 +308,7 @@ body.dark-mode #darkModeToggle:hover {
           <div class="col-md-4">
             <div class="p-4 bg-white rounded shadow">
               <h5>✅ Transparent Process</h5>
-              <p>Clear pricing, timelines, and expectations.</p>
+              <p>Clear pricing, timelines along with expectations.</p>
             </div>
           </div>
           <div class="col-md-4">
