--- a/NEXTRA DIGITAL/contact.html
+++ b/NEXTRA DIGITAL/contact.html
@@ -45,6 +45,7 @@
             <li class="nav-item">
               <a class="nav-link active" href="#">Contact</a>
             </li>
+            <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
           </ul>
         </div>
       </div>
