--- a/NEXTRA DIGITAL/services.html
+++ b/NEXTRA DIGITAL/services.html
@@ -77,6 +77,7 @@
         <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
         <li class="nav-item"><a class="nav-link" href="appointment.html">Appointment</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link" href="feedback.html">Feedback</a></li>
       </ul>
     </div>
   </div>
@@ -107,37 +108,40 @@
   document.getElementById('year').textContent = new Date().getFullYear();
 
   async function loadServices() {
-    const loading = document.getElementById('loading');
-    const error = document.getElementById('error-message');
-    const grid = document.getElementById('servicesGrid');
+  const loading = document.getElementById('loading');
+  const error = document.getElementById('error-message');
+  const grid = document.getElementById('servicesGrid');
 
-    try {
-      const response = await fetch('services.json');
-      if (!response.ok) throw new Error('Failed to fetch');
+  try {
+    const response = await fetch('services.json');
+    if (!response.ok) throw new Error('Failed to fetch');
 
-      const services = await response.json();
-      loading.style.display = 'none';
+    const services = await response.json();
+    loading.style.display = 'none';
 
-      services.forEach(service => {
-        const col = document.createElement('div');
-        col.className = 'col-md-6 col-lg-4';
-        col.innerHTML = `
+    services.forEach(service => {
+      const col = document.createElement('div');
+      col.className = 'col-md-6 col-lg-4';
+      col.innerHTML = `
+        <a href="appointment.html" class="text-decoration-none text-reset">
           <div class="card h-100 shadow-sm p-3">
             <div class="card-body">
               <h5 class="card-title">${service.title}</h5>
               <p class="card-text">${service.description}</p>
             </div>
           </div>
-        `;
-        grid.appendChild(col);
-      });
+        </a>
+      `;
+      grid.appendChild(col);
+    });
 
-    } catch (err) {
-      console.error(err);
-      loading.style.display = 'none';
-      error.style.display = 'block';
-    }
+  } catch (err) {
+    console.error(err);
+    loading.style.display = 'none';
+    error.style.display = 'block';
   }
+}
+
 
   loadServices();
 </script>
