--- a/NEXTRA DIGITAL/contact.html
+++ b/NEXTRA DIGITAL/contact.html
@@ -117,14 +117,14 @@
         <h4>Contact Details</h4>
 
         <ul class="list-unstyled">
-          <li><strong>Email:</strong> contact@nextradigital.com</li>
-          <li><strong>Phone:</strong> +91-9876543210</li>
+          <li><strong>Email:</strong>hrnexteradigital@gmail.com</li>
+          <li><strong>Phone:</strong> +91-7384666525</li>
           <li>
-            <strong>Office Address:</strong> 2nd Floor, Nextra Building, Sector
-            45, Gurugram, India
+            <strong>Office Address:</strong> Asansol,Mohishila colony,
+Stimultala
           </li>
           <li>
-            <strong>Working Hours:</strong> Mon - Fri, 10:00 AM to 6:00 PM
+            <strong>Working Hours:</strong> 10:00 AM to 8:00 PM
           </li>
         </ul>
       </div>
