--- a/NEXTRA DIGITAL/index.html
+++ b/NEXTRA DIGITAL/index.html
@@ -258,7 +258,7 @@ body.dark-mode #darkModeToggle:hover {
         <div class="row align-items-center">
           <div class="col-md-6 mb-4 mb-md-0">
             <img
-              src="homepage.png"
+              src="Generated image. (5).png"
               alt="Teamwork"
               class="img-fluid rounded shadow"
             />
