--- a/NEXTRA DIGITAL/index.html
+++ b/NEXTRA DIGITAL/index.html
@@ -277,6 +277,18 @@ body.dark-mode #darkModeToggle:hover {
             </p>
           </div>
         </div>
+        <div class="row justify-content-center mt-5">
+          <div class="col-lg-8">
+            <video
+              src="https://qu.ax/aHuny.mp4"
+              type="video/mp4"
+              controls
+              autoplay
+              class="img-fluid rounded shadow"
+              style="width: 100%; max-width: 700px; display: block; margin: 0 auto;"
+            ></video>
+          </div>
+        </div>
       </div>
     </section>
 
